<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_send_black_24"
                android:title="My Profile"/>
        <item
                android:id="@+id/nav_blog"
                android:icon="@drawable/baseline_send_black_24"
                android:title="@string/blog"/>
        <item
                android:id="@+id/nav_news"
                android:icon="@drawable/baseline_send_black_24"
                android:title="@string/news_and_events"/>
        <item
                android:id="@+id/nav_vendor"
                android:icon="@drawable/baseline_send_black_24"
                android:title="@string/vendor"/>
        <item
                android:id="@+id/nav_b2b"
                android:icon="@drawable/baseline_send_black_24"
                android:title="@string/b2b"/>
        <item
                android:id="@+id/nav_Help"
                android:icon="@drawable/baseline_send_black_24"
                android:title="@string/help_support"/>
    </group>

</menu>
