<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_select"
              android:background="@color/bg_color"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/otp"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_femail"
          android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/femail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fpass"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/fpass"
            android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:padding="10dp"
            android:id="@+id/input_layout_fconpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/fconpass"
              android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fotp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/fotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_otp" />
    </android.support.design.widget.TextInputLayout>
    <!-- Login Button -->

    <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="Reset Password"
            android:textColor="@color/white" />

    <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressBar"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center|bottom"
            app:indicatorColor="@color/colorPrimaryDark"
            app:indicatorName="BallClipRotatePulseIndicator" />
</LinearLayout>
