<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:theme="@style/AppTheme"
                android:orientation="vertical">

            <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:textColor="@color/colorPrimaryDark"-->
                    <!--android:textSize="45sp"-->
                    <!--android:id="@+id/appname_tvreg"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/app_name"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:layout_centerHorizontal="true"/>-->

            <RadioGroup
                    android:id="@+id/radioGroup_create"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/rb_army"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/army"/>

                <RadioButton
                        android:id="@+id/rb_civil"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/civil"/>
            </RadioGroup>

            <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/label_first_name"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/label_last_name"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/email_id"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/gender"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/country"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/state"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mobile_number"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />


            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />
            <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/confirm_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color" />




            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/register"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:background="@color/colorPrimary"
                    android:textSize="15sp" />

            <TextView
                    android:id="@+id/input_temslink"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_color" />
            <TextView
                    android:id="@+id/login_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="25dp"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:orientation="horizontal"
                    android:text="@string/login_now"
                    android:textColor="@color/text_color"/>

        </LinearLayout>

</ScrollView>

