<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">
                    <ImageView
                            android:id="@+id/logo"
                            android:layout_width="100dp"
                            android:layout_gravity="center"
                            android:layout_height="100dp"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/logo_without_name"/>

                    <TextView
                            android:textColor="@color/colorPrimary"
                            android:textSize="35sp"
                            android:id="@+id/appname_tv"
                            android:layout_gravity="center"
                            android:text="@string/a_n_u_r_a_k_t_i"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bodonbd"/>

                    <TextView
                            android:id="@+id/jawan_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:text="@string/j_a_w_a_n_s"
                            android:textColor="@android:color/black"/>


                    <EditText
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginTop="25dp"
                            android:background="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:hint="@string/email"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color" />

                    <EditText
                            android:id="@+id/password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/text_color" />

                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginRight="25dp"
                                android:layout_marginTop="15dp"
                                android:id="@+id/login_button"
                                android:text="@string/login"
                                android:textColor="@color/white"
                                android:background="@color/colorPrimary"/>

                    <TextView
                            android:id="@+id/forgot_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/forgot"/>

            <TextView
                    android:id="@+id/register_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:layout_marginTop="70dp"
                    android:orientation="horizontal"
                    android:text="@string/register_now"
                    android:textColor="@color/text_color"/>

                </LinearLayout>
</ScrollView>

